# Auto-PDF-to-MD-Agent

./: .coverage  .coverage.mighty-mini.local.75432.XAaOYKIx  .env.example  .gitignore  CLAUDE.md  README.md  com.user.pdf2md.plist.example  pyproject.toml  requirements.txt
src/: config.py  manual_monitor_test.py  monitor.py  ocr.py  pdf2md_service.py
src/auto_pdf_to_md_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_integration.py  test_monitor.py  test_ocr.py  test_pdf2md_service.py
